log
Wed, May 14, 2025 10:45:10 AM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:9: error: variable 'matriz' set but not used [-Werror=unused-but-set-variable]
     int matriz[9][9] ;
         ^~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025 10:45:44 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
410ba1a
Wed, May 14, 2025 10:47:10 AM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
deedcf2
Wed, May 14, 2025 10:48:10 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
b848b16
Wed, May 14, 2025 10:48:46 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f40f2d4
Wed, May 14, 2025 10:49:41 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ac55d67
Wed, May 14, 2025 10:49:48 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 5/70
602654f
Wed, May 14, 2025 10:50:33 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
82afe44
Wed, May 14, 2025 11:00:15 AM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:84:17: error: expected expression before '->' token
         arreglo[->sudo[i][k]] == 1 ;
                 ^~
sudoku.c:90:15: error: expected expression before '{' token
     arreglo = {0} ;
               ^
e73f046
Wed, May 14, 2025 11:00:28 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:84:32: error: statement with no effect [-Werror=unused-value]
         arreglo[n->sudo[i][k]] == 1 ;
         ~~~~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:90:15: error: expected expression before '{' token
     arreglo = {0} ;
               ^
cc1.exe: all warnings being treated as errors
9cd4821
Wed, May 14, 2025 11:00:37 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:90:15: error: expected expression before '{' token
     arreglo = {0} ;
               ^
ebe9a51
Wed, May 14, 2025 11:01:13 AM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3e80c3c
Wed, May 14, 2025 11:54:58 AM: 
 sudoku.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:99:9: error: 'return' with no value, in function returning non-void [-Werror]
         return ;
         ^~~~~~
sudoku.c:79:5: note: declared here
 int is_final(Node* n){
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
3b217eb
Wed, May 14, 2025 11:55:10 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
26074c0
Wed, May 14, 2025 11:56:58 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
865efd7
Wed, May 14, 2025 11:57:29 AM: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
a814cd5
Wed, May 14, 2025 11:57:49 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
1c14265
Wed, May 14, 2025 11:58:27 AM: 
 sudoku.c | 52 ++++++++++++++++++++++++++--------------------------
 1 file changed, 26 insertions(+), 26 deletions(-)
 tests:  2|4
total_score: 15/70
dd3c97b
Wed, May 14, 2025 12:00:17 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9525a27
Wed, May 14, 2025 12:00:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b5bd84e
Wed, May 14, 2025 12:07:46 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
ef8142a
Wed, May 14, 2025 12:08:56 PM: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
fe2f68d
